# proof_forge

./: .gitignore  .woodpecker.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  ProofForge.lean  README.md  RenderAleoFixtures.lean  justfile  lake-manifest.json  lakefile.lean  package-lock.json  package.json
benchmarks/native/near/counter-rs/: Cargo.toml
benchmarks/native/near/counter-rs/src/: lib.rs
benchmarks/native/solana/counter/: Cargo.toml  README.md
benchmarks/native/solana/counter/src/: lib.rs
references/solana/pinocchio/system-transfer/: Cargo.toml  README.md  reference-manifest.json
references/solana/pinocchio/system-transfer/src/: lib.rs
testkit/: Cargo.toml  README.md
testkit/compare/: Cargo.toml  GOAL.md  MATRIX.md  README.md
testkit/compare/near/access-control/: Cargo.toml  reference-manifest.json
testkit/compare/near/access-control/src/: lib.rs
testkit/compare/near/array-example/: Cargo.toml  reference-manifest.json
testkit/compare/near/array-example/src/: lib.rs
testkit/compare/near/auth-remote-call/: Cargo.toml  reference-manifest.json
testkit/compare/near/auth-remote-call/callee/: Cargo.toml
testkit/compare/near/auth-remote-call/callee/src/: lib.rs
testkit/compare/near/auth-remote-call/src/: lib.rs
testkit/compare/near/counter/: Cargo.toml  reference-manifest.json
testkit/compare/near/counter/src/: lib.rs
testkit/compare/near/escrow-vault/: Cargo.toml  reference-manifest.json
testkit/compare/near/escrow-vault/src/: lib.rs
testkit/compare/near/external-token-transfer/: Cargo.toml  reference-manifest.json
testkit/compare/near/external-token-transfer/peer/: Cargo.toml
testkit/compare/near/external-token-transfer/peer/src/: lib.rs
testkit/compare/near/external-token-transfer/src/: lib.rs
testkit/compare/near/external-vault/: Cargo.toml  reference-manifest.json
testkit/compare/near/external-vault/peer/: Cargo.toml
testkit/compare/near/external-vault/peer/src/: lib.rs
testkit/compare/near/external-vault/src/: lib.rs
testkit/compare/near/fee-token/: Cargo.toml  reference-manifest.json
testkit/compare/near/fee-token/src/: lib.rs
testkit/compare/near/ft-peer-client/: Cargo.toml  reference-manifest.json
testkit/compare/near/ft-peer-client/peer/: Cargo.toml
testkit/compare/near/ft-peer-client/peer/src/: lib.rs
testkit/compare/near/ft-peer-client/src/: lib.rs
testkit/compare/near/fungible-token/: Cargo.toml  reference-manifest.json
testkit/compare/near/fungible-token/src/: lib.rs
testkit/compare/near/guestbook/: Cargo.toml  reference-manifest.json
testkit/compare/near/guestbook/src/: lib.rs
testkit/compare/near/height-lock-vault/: Cargo.toml  reference-manifest.json
testkit/compare/near/height-lock-vault/src/: lib.rs
testkit/compare/near/host-env-probe/: Cargo.toml  reference-manifest.json
testkit/compare/near/host-env-probe/src/: lib.rs
testkit/compare/near/ownable/: Cargo.toml  reference-manifest.json
testkit/compare/near/ownable-hash/: Cargo.toml  reference-manifest.json
testkit/compare/near/ownable-hash/src/: lib.rs
testkit/compare/near/ownable-pausable/: Cargo.toml  reference-manifest.json
testkit/compare/near/ownable-pausable/src/: lib.rs
testkit/compare/near/ownable/src/: lib.rs
testkit/compare/near/pausable/: Cargo.toml  reference-manifest.json
testkit/compare/near/pausable/src/: lib.rs
testkit/compare/near/pro-rata-vault/: Cargo.toml  reference-manifest.json
testkit/compare/near/pro-rata-vault/src/: lib.rs
testkit/compare/near/reentrancy-guard/: Cargo.toml  reference-manifest.json
testkit/compare/near/reentrancy-guard/src/: lib.rs
testkit/compare/near/remote-call/: Cargo.toml  reference-manifest.json  rust-toolchain.toml
testkit/compare/near/remote-call/callee/: Cargo.toml
testkit/compare/near/remote-call/callee/src/: lib.rs
testkit/compare/near/remote-call/src/: lib.rs
testkit/compare/near/role-gated-token/: Cargo.toml  reference-manifest.json
testkit/compare/near/role-gated-token/src/: lib.rs
testkit/compare/near/sandbox/: Cargo.toml  README.md
testkit/compare/near/sandbox/src/: host.rs  kind.rs  main.rs  report.rs
testkit/compare/near/sandbox/src/scenarios/: access_control.rs  array_example.rs  auth_remote_call.rs  counter.rs  escrow_vault.rs  external_token_transfer.rs  external_vault.rs  fee_token.rs  ft_peer_client.rs  fungible_token.rs  guestbook.rs  (+18 more)
testkit/compare/near/soulbound-token/: Cargo.toml  reference-manifest.json
testkit/compare/near/soulbound-token/src/: lib.rs
testkit/compare/near/staking-vault/: Cargo.toml  reference-manifest.json
testkit/compare/near/staking-vault/src/: lib.rs
testkit/compare/near/status-message/: Cargo.toml  reference-manifest.json
testkit/compare/near/status-message/src/: lib.rs
testkit/compare/near/storage-deposit/: Cargo.toml  reference-manifest.json
testkit/compare/near/storage-deposit/src/: lib.rs
testkit/compare/near/timelock-vault/: Cargo.toml  reference-manifest.json
testkit/compare/near/timelock-vault/src/: lib.rs
testkit/compare/near/value-vault/: Cargo.toml  reference-manifest.json
testkit/compare/near/value-vault/src/: lib.rs
testkit/compare/near/vesting-vault/: Cargo.toml  reference-manifest.json
testkit/compare/near/vesting-vault/src/: lib.rs
testkit/compare/src/: main.rs
testkit/core/: Cargo.toml
testkit/core/src/: lib.rs
testkit/harness-evm/: Cargo.toml
testkit/harness-evm/src/: lib.rs
testkit/harness-near/: Cargo.toml
testkit/harness-near/src/: lib.rs
testkit/harness-quint/: Cargo.toml
testkit/harness-quint/src/: lib.rs
testkit/harness-solana/: Cargo.toml
testkit/harness-solana/src/: lib.rs  live_rpc.rs  spl_token.rs  token_2022.rs
testkit/harness-solana/tests/: peer_cpi.rs  remote_call_cpi.rs
testkit/runner/: Cargo.toml
testkit/runner/src/: main.rs
testkit/scenarios/: allocator-release.toml  array-example.toml  counter.toml  error-ref-user-code.toml  error-ref.toml  ownable.toml  quint-counter.toml  quint-value-vault.toml  remote-call.toml  role-gated-token.toml  staking-vault.toml  unsupported-crosscall.toml  value-vault.toml
(+1701 files in other folders)
