[workspace]
resolver = "2"
members = [
  "core",
  "harness-evm",
  "harness-near",
  "harness-solana",
  "runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "1.0"
hex = "0.4"
mollusk-svm = "0.13.4"
revm = { version = "41.0.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account = "3.4.0"
solana-address = "2.6.1"
solana-instruction = "3.3.0"
toml = "0.8"
