[workspace]
resolver = "2"
members = [
  "core",
  "harness-evm",
  "harness-near",
  "harness-quint",
  "harness-solana",
  "runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
bincode = "1.3"
blake3 = "1.8"
hex = "0.4"
mollusk-svm = "0.13.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
revm = { version = "41.0.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
solana-account = "3.4.0"
solana-address = "2.6.1"
solana-instruction = "3.3.0"
solana-keypair = "3.1.0"
solana-signer = "3.0.0"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-transaction-error = "3.3.1"
solana-transaction = { version = "3.1.0", features = ["bincode"] }
spl-tlv-account-resolution = "0.11.1"
spl-type-length-value = "0.9.1"
spl-token-2022-interface = "2.1.0"
spl-transfer-hook-interface = "2.1.0"
toml = "0.8"
