[package]
name = "proof-forge-testkit-harness-evm"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
proof-forge-testkit-core = { path = "../core" }
revm.workspace = true
serde.workspace = true
serde_json.workspace = true
