[package]
name = "proof-forge-testkit-harness-solana"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
mollusk-svm.workspace = true
proof-forge-testkit-core = { path = "../core" }
serde.workspace = true
solana-account.workspace = true
solana-address.workspace = true
solana-instruction.workspace = true
toml.workspace = true
