[package]
name = "proof-forge-testkit-harness-solana"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
blake3.workspace = true
hex.workspace = true
mollusk-svm.workspace = true
proof-forge-testkit-core = { path = "../core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
solana-account.workspace = true
solana-address = { workspace = true, features = ["atomic", "curve25519", "decode"] }
solana-instruction.workspace = true
solana-keypair.workspace = true
solana-signer.workspace = true
solana-system-interface.workspace = true
solana-transaction-error.workspace = true
solana-transaction.workspace = true
toml.workspace = true
