[package]
name = "proof-forge-testkit"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
proof-forge-testkit-core = { path = "../core" }
proof-forge-testkit-harness-evm = { path = "../harness-evm" }
proof-forge-testkit-harness-near = { path = "../harness-near" }
proof-forge-testkit-harness-quint = { path = "../harness-quint" }
proof-forge-testkit-harness-solana = { path = "../harness-solana" }
