[package]
name = "native-near-counter"
version = "0.1.0"
edition = "2021"
description = "Native NEAR Counter — hand-written near-sdk-rs reference for benchmark comparison."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.6"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
