# Native Solana Counter — hand-written Pinocchio reference for benchmark comparison.
# Mirrors ProofForge Counter: initialize → increment → get.
#
# Optional typecheck (host, no sBPF link):
#   cargo check --manifest-path benchmarks/native/solana/counter/Cargo.toml --features bpf-entrypoint
#
# Full sBPF ELF (needs Solana platform-tools):
#   cargo-build-sbf --manifest-path benchmarks/native/solana/counter/Cargo.toml

[package]
name = "proofforge-benchmark-native-solana-counter"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Pinocchio-class native Counter for ProofForge B1 benchmarks"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
pinocchio = { version = "0.11", default-features = false }
solana-define-syscall = { version = "5.0", features = ["unstable-static-syscalls"] }
