[package]
name = "proofforge-pinocchio-system-transfer-reference"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
pinocchio = { version = "0.11", default-features = false, features = ["cpi"] }
pinocchio-system = "0.6"
solana-define-syscall = { version = "5.0", features = ["unstable-static-syscalls"] }
