[package]
name = "pf-near-sdk-counter-reference"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "near-sdk-rs Counter reference for testkit/compare (NEAR)"

# Standalone package: not a member of the testkit workspace (avoids pulling
# near-sdk into the main graph). Empty [workspace] roots this crate.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

# near-sdk 5.x refuses host builds unless a valid cfg/feature is active.
# Keep default lean for wasm32 size comparison; enable `host-tests` only
# for host-side `cargo test --features host-tests`.
[dependencies]
near-sdk = "5.28"

[features]
default = []
host-tests = ["near-sdk/unit-testing"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
