[package]
name = "pf-near-sandbox-dual"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "NEAR Sandbox dual-deploy compare: ProofForge wasm vs near-sdk reference"

# Standalone crate (not a member of the testkit workspace).
[workspace]

[[bin]]
name = "pf-near-sandbox-dual"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
near-gas = "0.3"
near-workspaces = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
