[package]
name = "pf-near-sdk-ft-peer-mock-reference"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Mock NEP-141 peer for FtPeerClient compare"
[workspace]
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
near-sdk = "5.28"
[features]
default = []
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
